--- a/ReadMe
+++ b/ReadMe
@@ -1,5 +1,5 @@
 =========================================================================================
-					Assignment 3
+					Project 3
 Name: Bhavik Mistry
 =========================================================================================
 
